# zwirn

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  cabal.project.local  config.js  main.js  minilambda.cabal  package-lock.json  package.json  preload.js  zwirn-ci-config.yaml  zwirn.cabal
.github/workflows/: build-release-linux.yml
app/: Arbitrary.hs  Compiler.hs  Interpreter.hs  Language.hs  Main.hs  Megaparsec.hs  Parser.hs  Tidal.hs
app/Editor/: Backend.hs  Block.hs  CommandLine.hs  Config.hs  Frontend.hs  Highlight.hs  Hint.hs  Hydra.hs  Setup.hs  UI.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Functional.hs  Generic.hs  Interpreter.hs  Meta.hs  MiniPrelude.hs  Tidal.hs
src/Prelude/: Control.hs  Hydra.hs  MiniPrelude.hs  Params.hs
src/Zwirn/: Interactive.hs  Jack.hs  Language.hs  Stream.hs
src/Zwirn/Interactive/: AST.hs  Convert.hs  Generic.hs  HydraT.hs  Meta.hs  Prelude.hs  TidalT.hs  Transform.hs  Types.hs
src/Zwirn/Interactive/Prelude/: Chords.hs  Control.hs  Core.hs  Hydra.hs  MiniPrelude.hs  Params.hs
src/Zwirn/Language/: Block.hs  Builtin.hs  Compiler.hs  Default.hs  Environment.hs  Evaluate.hs  Generator.hs  Hint.hs  Language.hs  Lexer.x  Megaparsec.hs  Parser.hs  Parser.y  Pretty.hs  Rotate.hs  Simple.hs  Syntax.hs
src/Zwirn/Language/Builtin/: Internal.hs  Parameters.hs  Prelude.hs
src/Zwirn/Language/Evaluate/: Convert.hs  Expression.hs  Internal.hs  SKI.hs
src/Zwirn/Language/TypeCheck/: Constraint.hs  Env.hs  Infer.hs  Types.hs
static/: config.yaml  tidal.js  tidalConfig.js
static/codemirror/: closebrackets.js  haskell.js  matchbrackets.js
zwirn-ci/: Main.hs
zwirn-ci/CI/: Backend.hs  Config.hs  Documentation.hs  Listener.hs  Setup.hs
zwirn-cli/: Main.hs
zwirn-cli/CLI/: CommandLine.hs  Setup.hs
zwirn-editor/: Main.hs
zwirn-editor/Editor/: Backend.hs  Config.hs  Hydra.hs  Setup.hs
zwirn-interpreter/: Main.hs
zwirn-interpreter/Editor/: Highlight.hs  Setup.hs  Tomato.hs
zwirn-listener/: Main.hs
zwirn-listener/Listener/: CommandLine.hs  Listen.hs  Setup.hs
