cabal-version:      >=1.10
name:               minilambda

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Martin Gius
maintainer:         gius_martin@yahoo.de
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md


library
  hs-source-dirs: src
  exposed-modules: Functional
                   MiniPrelude
  build-depends: base
  default-language: Haskell2010
  ghc-options: -threaded
               -Wall

executable minilambda-interpreter
    main-is:          Main.hs
    other-modules:    Language
                      Parser
                      Compiler
                      Tidal
                      Arbitrary
                      Megaparsec
    build-depends:    base,
                      parsec,
                      megaparsec,
                      containers,
                      tidal == 1.9.2,
                      minilambda,
                      hint,
                      QuickCheck
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded
                 -Wall
