cabal-version:      3.0
name:               zwirn
version:            0.1.0.0
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Martin Gius
maintainer:         gius_martin@yahoo.de
build-type:         Simple
extra-doc-files:    README.md


library
  hs-source-dirs: src
  exposed-modules: Zwirn.Language.TypeCheck.Types
                   Zwirn.Language.TypeCheck.Constraint
                   Zwirn.Language.TypeCheck.Infer
                   Zwirn.Language.Syntax
                   Zwirn.Language.Lexer
                   Zwirn.Language.Parser
                   Zwirn.Language.Compiler
                   Zwirn.Language.Rotate
                   Zwirn.Language.Simple
                   Zwirn.Language.Pretty
                   Zwirn.Language.Block
                   Zwirn.Language.Builtin.Internal
                   Zwirn.Language.Builtin.Prelude
                   Zwirn.Language.Builtin.Parameters
                   Zwirn.Language.Environment
                   Zwirn.Language.Evaluate
                   Zwirn.Language.Evaluate.Convert
                   Zwirn.Language.Evaluate.Expression
                   Zwirn.Language.Evaluate.SKI
                   Zwirn.Language.Evaluate.Internal
                   Zwirn.Language
                   Zwirn.Stream
  build-depends: base >= 4.19,
                 array,
                 text,
                 pretty,
                 mtl,
                 exceptions,
                 filepath,
                 containers,
                 zwirn-core == 0.1.1.0,
                 tidal-link,
                 hosc == 0.21,
                 network,
                 bytestring
  build-tool-depends: alex:alex, happy:happy
  default-language: Haskell2010
  ghc-options: -threaded
               -Wall

executable zwirn-interpreter
    main-is:          Main.hs
    other-modules:    Editor.Backend
                      Editor.Frontend
                      Editor.Setup
                      Editor.UI
                      Editor.Highlight
                      Editor.Hydra
                      Editor.CommandLine
    build-depends:    base >= 4.19,
                      text,
                      containers,
                      tidal-link,
                      deepseq,
                      zwirn,
                      threepenny-gui,
                      exceptions,
                      filepath,
                      directory,
                      optparse-applicative,
                      zwirn-core
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded
                 -Wall
