cabal-version:      3.0
name:               zwirn
version:            0.1.0.0
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Martin Gius
maintainer:         gius_martin@yahoo.de
build-type:         Simple
extra-doc-files:    README.md


library
  hs-source-dirs: src
  exposed-modules: Zwirn.Language.TypeCheck.Types
                   Zwirn.Language.TypeCheck.Constraint
                   Zwirn.Language.TypeCheck.Infer
                   Zwirn.Language.Syntax
                   Zwirn.Language.Lexer
                   Zwirn.Language.Parser
                   Zwirn.Language.Compiler
                   Zwirn.Language.Rotate
                   Zwirn.Language.Simple
                   Zwirn.Language.Pretty
                   Zwirn.Language.Block
                   Zwirn.Language.Builtin.Internal
                   Zwirn.Language.Builtin.Prelude
                   Zwirn.Language.Builtin.Parameters
                   Zwirn.Language.Environment
                   Zwirn.Language.Evaluate
                   Zwirn.Language.Evaluate.Convert
                   Zwirn.Language.Evaluate.Expression
                   Zwirn.Language.Evaluate.SKI
                   Zwirn.Language.Evaluate.Internal
                   Zwirn.Language
                   Zwirn.Stream
  build-depends: array >= 0.5.6 && < 0.6,
                 base >= 4.17 && < 4.20,
                 bytestring >= 0.12.1 && < 0.13,
                 pretty >= 1.1.3 && < 1.2,
                 containers >= 0.6.8 && < 0.7,
                 exceptions >= 0.10.9 && < 0.11,
                 mtl >= 2.3.1 && < 2.4,
                 filepath >= 1.5.4 && < 1.6,
                 hosc >= 0.21.1 && < 0.22,
                 text >= 2.1.1 && < 2.2,
                 network >= 3.2.7 && < 3.3,
                 zwirn-core >= 0.1.1 && < 0.2,
                 tidal-link >= 1.1 && < 1.2
  build-tool-depends: alex:alex, happy:happy
  default-language: Haskell2010
  ghc-options: -threaded
               -Wall

executable zwirn-editor
    main-is:          Main.hs
    other-modules:    Editor.Backend
                      Editor.Frontend
                      Editor.Setup
                      Editor.UI
                      Editor.Highlight
                      Editor.Hydra
                      Editor.Config
    build-depends:    base >= 4.17 && < 4.20,
                      text >= 2.1.1 && < 2.2,
                      containers >= 0.6.8 && < 0.7,
                      zwirn >= 0.1 && < 0.2,
                      threepenny-gui,
                      exceptions,
                      filepath,
                      directory,
                      conferer,
                      conferer-yaml,
                      zwirn-core >= 0.1 && < 0.2,
                      tidal-link >= 1.1 && < 1.2
    hs-source-dirs:   zwirn-editor
    default-language: Haskell2010
    ghc-options: -threaded
                 -Wall

executable zwirn-ci
    main-is:          Main.hs
    other-modules:    CI.Backend
                      CI.Setup
                      CI.Config
                      CI.Documentation
                      CI.Listener
    build-depends:    base >= 4.17 && < 4.20,
                      haskeline,
                      text >= 2.1.1 && < 2.2,
                      mtl >= 2.3.1 && < 2.4,
                      file-embed,
                      file-io,
                      containers >= 0.6.8 && < 0.7,
                      bytestring >= 0.12.1 && < 0.13,
                      tidal-link >= 1.0.4,
                      zwirn >= 0.1 && < 0.2,
                      hosc >= 0.21.1 && < 0.22,
                      network >= 3.2.7 && < 3.3,
                      exceptions >= 0.10.9 && < 0.11,
                      filepath,
                      directory,
                      conferer,
                      conferer-yaml,
                      zwirn-core >= 0.1.1 && < 0.2,
    hs-source-dirs:   zwirn-ci
    default-language: Haskell2010
    ghc-options: -threaded
                 -Wall
