cabal-version:      3.0
name:               zwirn
version:            0.1.0.1
synopsis:           a live coding language for playing with nested functions of time
description:        zwirn is a live coding language for playing with nested functions of time,
                    which trigger the sending of osc-messages. it's syntax is inspired by TidalCycles'
                    mini-notation and it's API for manipulating patterns.
license:            GPL-3.0-only
license-file:       LICENSE
author:             Martin Gius
maintainer:         Martin Gius
copyright:          Martin Gius
category:           Language, Sound
build-type:         Simple
extra-doc-files:    README.md
tested-with:        GHC == 9.8.2

source-repository this
  type:              git
  location:          https://github.com/polymorphicengine/zwirn
  tag:               0.1.0.0


library
  hs-source-dirs: src
  exposed-modules: Zwirn.Language.TypeCheck.Types
                   Zwirn.Language.TypeCheck.Constraint
                   Zwirn.Language.TypeCheck.Infer
                   Zwirn.Language.Syntax
                   Zwirn.Language.Lexer
                   Zwirn.Language.Parser
                   Zwirn.Language.Compiler
                   Zwirn.Language.Rotate
                   Zwirn.Language.Simple
                   Zwirn.Language.Pretty
                   Zwirn.Language.Block
                   Zwirn.Language.Builtin.Internal
                   Zwirn.Language.Builtin.Prelude
                   Zwirn.Language.Builtin.Parameters
                   Zwirn.Language.Environment
                   Zwirn.Language.Evaluate
                   Zwirn.Language.Evaluate.Convert
                   Zwirn.Language.Evaluate.Expression
                   Zwirn.Language.Evaluate.SKI
                   Zwirn.Language.Evaluate.Internal
                   Zwirn.Language
                   Zwirn.Stream
  build-depends: array >= 0.5 && < 0.6,
                 base >= 4.17 && < 4.20,
                 bytestring >= 0.12.1 && < 0.13,
                 pretty >= 1.1 && < 1.2,
                 containers >= 0.6.8 && < 0.7,
                 exceptions >= 0.10.9 && < 0.11,
                 mtl >= 2.3.1 && < 2.4,
                 filepath >= 1.5.4 && < 1.6,
                 hosc >= 0.21.1 && < 0.22,
                 text >= 2 && < 2.2,
                 network >= 3.2.7 && < 3.3,
                 zwirn-core >= 0.1.1 && < 0.2,
                 tidal-link >= 1.1 && < 1.2
  build-tool-depends: alex:alex, happy:happy
  default-language: Haskell2010
  ghc-options: -threaded
               -Wall
